add slider with lib owl

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -141,27 +142,28 @@
         </div>
     </section>
 
-    <section class="carousel">
+    <section class="slider">
         <div class="container">
-            <div class="carousel__inner">
-                <div>
-                    <img src="img/slider/slide.png" alt="">
+            <div class="slider__content">
+                <div class="owl-carousel">
+                    <div>
+                        <img src="img/slider/slide.png" alt="watch">
+                    </div>
+                    <div>
+                        <img src="img/slider/slide2.png" alt="watch">
+                    </div>
+                    <div>
+                        <img src="img/slider/slide3.png" alt="watch">
+                    </div>
                 </div>
-                <div>
-                    <img src="img/slider/slide2.png" alt="">
-                </div>
-                <div>
-                    <img src="img/slider/slide3.png" alt="">
-                </div>
+                <button class="btn nextBtn" id="next"><img src="icons/slider/arrowright.svg" alt="nextbutton"></button>
+                <button class="btn prevBtn" id="prev"><img src="icons/slider/arrowleft.svg" alt="previuosbutton"></button>
             </div>
         </div>
     </section>
 
-
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/index.js"></script>
-
 </body>
 </html>
