--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
             <ul class="catalog__tabs">
                 <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
                 <li class="catalog__tab"><div>для бега</div></li>
-                <li class="catalog__tab"><div>для триатлона</div></li>
+                <li class="catalog__tab"><div class="text-320">для триатлона</div></li>
             </ul>
             <div class="catalog__content catalog__content_active">
                 <div class="catalog-item">
