--- a/src/index.html
+++ b/src/index.html
@@ -422,6 +422,54 @@
         </div>
     </section>
 
+    <section class="feedback">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+
+            <div class="feedback__content">
+                <div class="feedback__block">
+                    <div class="feedback__img"><img src="img/feedback/item.png" alt="photo" class="feedback__circle"></div>
+                    <div class="feedback__text-block">
+                        <div class="feedback__name">Ирина Иванченко </div>
+                        <div class="feedback__descr">2 полумарафона</div>
+                        <div class="feedback__text">
+                            Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. 
+                            <br><span>Новые цели - новый гаджет!</span>
+                            <br>Спасибо, RunSmart! 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feedback__block">
+                    <div class="feedback__img"><img src="img/feedback/photo_2.png" alt="photo" class="feedback__circle"></div>
+                    <div class="feedback__text-block">
+                        <div class="feedback__name">Иван Сёмочкин</div>
+                        <div class="feedback__descr">1 полумарафон</div>
+                        <div class="feedback__text">
+                            Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.
+                            <br> <span>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.</span>
+                            <br>С ними подготовился к своему первому полумарафону! Спасибо!!! 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feedback__block">
+                    <div class="feedback__img"><img src="img/feedback/photo_3.png" alt="photo" class="feedback__circle"></div>
+                    <div class="feedback__text-block">
+                        <div class="feedback__name">Юлия Дашкина </div>
+                        <div class="feedback__descr">2 полумарафона</div>
+                        <div class="feedback__text">
+                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            <br><span>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</span>
+                            <br>Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/index.js"></script>
