--- a/src/index.html
+++ b/src/index.html
@@ -470,6 +470,20 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <!-- <div class="footer__map"></div> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4321709055293!2d37.64220248409709!3d55.76836563132661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54bbe04e6ac0d%3A0x481caf8321d1c6cd!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQsINCc0L7RgdC60LLQsCwg0KDQvtGB0YHQuNGPLCAxMDcwNzg!5e0!3m2!1sru!2skz!4v1729340138699!5m2!1sru!2skz" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel: 84999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/footer/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/footer/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/footer/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/index.js"></script>
