--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
                 и мы перезвоним вам в течении 10 минут
             </div>
 
-            <form class="feed-form" action="#">
+            <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" required type="text" placeholder="Ваше имя">
                 <input name="phone" required type="tel" placeholder="Ваш телефон">
                 <input name="email" required type="email" placeholder="Ваш E-mail">
@@ -490,9 +490,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
-                <input name="name" required type="text" placeholder="Ваше имя">
-                <input name="phone" required type="tel" placeholder="Ваш телефон">
-                <input name="email" required type="email" placeholder="Ваш E-mail">
+                <input name="name" type="text" placeholder="Ваше имя">
+                <input name="phone" type="tel" placeholder="Ваш телефон">
+                <input name="email" type="email" placeholder="Ваш E-mail">
 
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
@@ -520,6 +520,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
