add scroll in header

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section class="promo" id="up">
         <div class="container">
 
             <header class="header">
@@ -517,6 +517,11 @@
                 <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
             </div>
     </div>
+
+    <a href="#up" class="pageup">
+        <img src="icons/arrowup.svg" class="up"  alt="up">
+    </a>
+    
 
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
