add animnations in css and add lib wow and animate.css

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -87,7 +88,7 @@
                 <div class="advantages__icons">
 
                     <div class="advantages__icon">
-                        <img src="icons/info/heart.svg" alt="cup">
+                        <img src="icons/info/heart.svg" class="advantages__icon advantages__icon_animated" alt="cup">
                     </div>
 
                     <div class="advantages__title-mini">
@@ -427,7 +428,7 @@
             <h2 class="title">отзывы клиентов</h2>
 
             <div class="feedback__content">
-                <div class="feedback__block">
+                <div class="feedback__block wow fadeInUp">
                     <div class="feedback__img"><img src="img/feedback/item.png" alt="photo" class="feedback__circle"></div>
                     <div class="feedback__text-block">
                         <div class="feedback__name">Ирина Иванченко </div>
@@ -440,7 +441,7 @@
                     </div>
                 </div>
 
-                <div class="feedback__block">
+                <div class="feedback__block wow fadeInUp">
                     <div class="feedback__img"><img src="img/feedback/photo_2.png" alt="photo" class="feedback__circle"></div>
                     <div class="feedback__text-block">
                         <div class="feedback__name">Иван Сёмочкин</div>
@@ -453,7 +454,7 @@
                     </div>
                 </div>
 
-                <div class="feedback__block">
+                <div class="feedback__block wow fadeInUp">
                     <div class="feedback__img"><img src="img/feedback/photo_3.png" alt="photo" class="feedback__circle"></div>
                     <div class="feedback__text-block">
                         <div class="feedback__name">Юлия Дашкина </div>
@@ -526,6 +527,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
