--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="header__contacts">
-                    <a href="tel: +74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
                     <button data-modal="consultation" class="button">заказать звонок</button>
                 </div>
             </header>
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section class="advantages">
+    <div class="advantages">
         <div class="container">
 
             <div class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</div>
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <section class="consultation">
         <div class="container">
